modified:   app.py 	new file:   auth.py 	new file:   requirements.txt 	new file:   static/css/style.css 	new file:   templates/base.html 	new file:   templates/home.html 	modified:   templates/login.html 	modified:   templates/search.html 	modified:   templates/upload.html

--- a/templates/search.html
+++ b/templates/search.html
@@ -1,15 +1,17 @@
-<!-- templates/search.html -->
-<form action="/search">
-    <input type="text" name="breed" placeholder="搜索品种">
-    <input type="number" name="age" placeholder="搜索年龄">
-    <button type="submit">搜索</button>
-</form>
 
-{% for cat in cats %}
+{% extends "base.html" %}
+
+{% block content %}
+<h2>猫咪信息查询</h2>
+<div class="cats-list">
+    {% for cat in cats %}
     <div class="cat-card">
-        <img src="{{ url_for('static', filename='uploads/' + cat.image) }}">
-        <h3>{{ cat.breed }}</h3>
-        <p>年龄: {{ cat.age }}</p>
+        {% if cat.image %}
+        <img src="{{ url_for('static', filename='uploads/' + cat.image) }}" alt="{{ cat.name }}">
+        {% endif %}
+        <h3>{{ cat.name }}</h3>
         <p>{{ cat.description }}</p>
     </div>
-{% endfor %}
+    {% endfor %}
+</div>
+{% endblock %}
