--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,17 @@
-<!-- templates/login.html -->
+
+{% extends "base.html" %}
+
+{% block content %}
+<h2>登录</h2>
 <form method="POST">
-    <input type="text" name="username" placeholder="用户名" required>
-    <input type="password" name="password" placeholder="密码" required>
+    <div>
+        <label for="username">用户名:</label>
+        <input type="text" id="username" name="username" required>
+    </div>
+    <div>
+        <label for="password">密码:</label>
+        <input type="password" id="password" name="password" required>
+    </div>
     <button type="submit">登录</button>
 </form>
+{% endblock %}
