--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,25 @@
     <meta charset="utf-8">
     <title>猫咪信息网站</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>猫咪信息中心</h1>
-    </header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{{ url_for('home') }}">猫咪信息中心</a>
+            <div class="navbar-nav">
+                {% if current_user.is_authenticated %}
+                    {% if current_user.is_admin %}
+                        <a class="nav-link" href="{{ url_for('admin_cats') }}">猫咪管理</a>
+                        <a class="nav-link" href="{{ url_for('upload') }}">添加猫咪</a>
+                    {% endif %}
+                    <a class="nav-link" href="{{ url_for('logout') }}">退出</a>
+                {% else %}
+                    <a class="nav-link" href="{{ url_for('login') }}">登录</a>
+                {% endif %}
+            </div>
+        </div>
+    </nav>
     <main>
         {% block content %}{% endblock %}
     </main>
