--- a/templates/login.html
+++ b/templates/login.html
@@ -4,14 +4,15 @@
 {% block content %}
 <h2>登录</h2>
 <form method="POST">
-    <div>
+    <div class="form-group">
         <label for="username">用户名:</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" class="form-control" id="username" name="username" required>
     </div>
-    <div>
+    <div class="form-group">
         <label for="password">密码:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" class="form-control" id="password" name="password" required>
     </div>
-    <button type="submit">登录</button>
+    <button type="submit" class="btn btn-primary">登录</button>
 </form>
+
 {% endblock %}
