--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,9 @@
                         <a class="nav-link" href="{{ url_for('admin.cats') }}">猫咪管理</a>
                         <a class="nav-link" href="{{ url_for('cats.upload') }}">添加猫咪</a>
                     {% endif %}
-                    <a class="nav-link" href="{{ url_for('logout') }}">退出</a>
+                    <a class="nav-link" href="{{ url_for('auth.logout') }}">退出</a>
                 {% else %}
-                    <a class="nav-link" href="{{ url_for('login') }}">登录</a>
+                    <a class="nav-link" href="{{ url_for('auth.login') }}">登录</a>
                 {% endif %}
             </div>
         </div>
