--- a/templates/edit_cat.html
+++ b/templates/edit_cat.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <button type="submit" class="btn btn-primary">保存</button>
-    <a href="{{ url_for('admin_cats') }}" class="btn btn-secondary">取消</a>
+    <a href="{{ url_for('admin.cats') }}" class="btn btn-secondary">取消</a>
 </form>
 
 <script>
