--- a/templates/base.html
+++ b/templates/base.html
@@ -6,23 +6,51 @@
     <title>猫咪信息网站</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}?v=1.0" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{{ url_for('main.home') }}">猫咪信息中心</a>
-            <div class="navbar-nav">
-                {% if current_user.is_authenticated %}
-                    {% if current_user.is_admin %}
-                        <a class="nav-link" href="{{ url_for('admin.cats') }}">猫咪管理</a>
-                        <a class="nav-link" href="{{ url_for('cats.upload') }}">添加猫咪</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+        <div class="container">
+            <a class="navbar-brand" href="{{ url_for('main.home') }}">
+                <i class="bi bi-house-heart"></i> 猫咪信息中心
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    {% if current_user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('main.search') }}">
+                                <i class="bi bi-search"></i> 查询猫咪
+                            </a>
+                        </li>
+                        {% if current_user.is_admin %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                                <i class="bi bi-gear"></i> 管理
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="{{ url_for('admin.cats') }}">猫咪管理</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('admin.users') }}">用户管理</a></li>
+                            </ul>
+                        </li>
+                        {% endif %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('auth.logout') }}">
+                                <i class="bi bi-box-arrow-right"></i> 退出
+                            </a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('auth.login') }}">
+                                <i class="bi bi-box-arrow-in-right"></i> 登录
+                            </a>
+                        </li>
                     {% endif %}
-                    <a class="nav-link" href="{{ url_for('auth.logout') }}">退出</a>
-                {% else %}
-                    <a class="nav-link" href="{{ url_for('auth.login') }}">登录</a>
-                {% endif %}
+                </ul>
             </div>
         </div>
     </nav>
