--- a/templates/base.html
+++ b/templates/base.html
@@ -4,18 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>猫咪信息网站</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" >
-    <!-- 优先使用本地Bootstrap CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}">
-    <!-- CDN作为备用 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
-          crossorigin="anonymous"
-          onerror="this.onerror=null;this.href='{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}'">
+    <link rel="stylesheet" href="{{ url_for('static/css/', filename='style.css') }}" >
+    <!-- 本地Bootstrap CSS -->
+    <link rel="stylesheet" href="{{ url_for('static/vendor/bootstrap/css/', filename='bootstrap.min.css') }}">
     <!-- 图标库 -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap-icons/font/bootstrap-icons.css') }}">
-    <!-- CDN备用 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
-          onerror="this.onerror=null;this.href='{{ url_for('static', filename='vendor/bootstrap-icons/font/bootstrap-icons.css') }}'">
+    <link rel="stylesheet" href="{{ url_for('static/vendor/bootstrap-icons/font', filename='bootstrap-icons.css') }}">
     <script>
     // 增强资源加载失败处理
     document.addEventListener('DOMContentLoaded', function() {
@@ -42,17 +35,9 @@
     });
     </script>
     <!-- 本地jQuery -->
-    <script src="{{ url_for('static', filename='vendor/jquery/jquery-3.6.0.min.js') }}"></script>
-    <!-- CDN备用 -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
-            crossorigin="anonymous"
-            onerror="this.onerror=null;this.src='{{ url_for('static', filename='vendor/jquery/jquery-3.6.0.min.js') }}'"></script>
+    <script src="{{ url_for('static/vendor/jquery/', filename='jquery-3.6.0.min.js') }}"></script>
     <!-- 本地Bootstrap JS -->
-    <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
-    <!-- CDN备用 -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
-            crossorigin="anonymous"
-            onerror="this.onerror=null;this.src='{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}'"></script>
+    <script src="{{ url_for('static/vendor/bootstrap/js/', filename='bootstrap.bundle.min.js') }}"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
