modified:   templates/base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>猫咪信息网站</title>
-    <link rel="stylesheet" href="{{ url_for('static/css/', filename='style.css') }}" >
+    <link rel="stylesheet" href="{{ url_for('static/css', filename='style.css') }}" >
     <!-- 本地Bootstrap CSS -->
-    <link rel="stylesheet" href="{{ url_for('static/vendor/bootstrap/css/', filename='bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static/vendor/bootstrap/css', filename='bootstrap.min.css') }}">
     <!-- 图标库 -->
     <link rel="stylesheet" href="{{ url_for('static/vendor/bootstrap-icons/font', filename='bootstrap-icons.css') }}">
     <script>
@@ -35,9 +35,9 @@
     });
     </script>
     <!-- 本地jQuery -->
-    <script src="{{ url_for('static/vendor/jquery/', filename='jquery-3.6.0.min.js') }}"></script>
+    <script src="{{ url_for('static/vendor/jquery', filename='jquery-3.6.0.min.js') }}"></script>
     <!-- 本地Bootstrap JS -->
-    <script src="{{ url_for('static/vendor/bootstrap/js/', filename='bootstrap.bundle.min.js') }}"></script>
+    <script src="{{ url_for('static/vendor/bootstrap/js', filename='bootstrap.bundle.min.js') }}"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
