modified:   app/__init__.py 	modified:   app/config.py 	modified:   run.py 	modified:   templates/base.html 	modified:   templates/home.html 	modified:   templates/upload.html 	new file:   test_logging.py

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
                                 <i class="bi bi-gear"></i> 管理
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{{ url_for('admin.cats') }}">猫咪管理</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('admin.cats_list') }}">猫咪管理</a></li>
                                 <li><a class="dropdown-item" href="{{ url_for('admin.users') }}">用户管理</a></li>
                             </ul>
                         </li>
