--- a/templates/upload.html
+++ b/templates/upload.html
@@ -18,6 +18,6 @@
         {{ form.image(class="form-control") }}
     </div>
     <button type="submit" class="btn btn-primary">上传</button>
-    <a href="{{ url_for('admin.cats') }}" class="btn btn-secondary">返回管理</a>
+    <a href="{{ url_for('admin.cats_list') }}" class="btn btn-secondary">返回管理</a>
 </form>
 {% endblock %}
