--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
                         <i class="bi bi-search"></i> 查询猫咪
                     </a>
                     {% if current_user.is_admin %}
-                    <a href="{{ url_for('admin.cats') }}" class="btn btn-outline-primary btn-lg px-4">
+                    <a href="{{ url_for('admin.cats_list') }}" class="btn btn-outline-primary btn-lg px-4">
                         <i class="bi bi-gear"></i> 管理后台
                     </a>
                     {% endif %}
