--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{{ url_for('admin.cats_list') }}">猫咪管理</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('admin.users') }}">用户管理</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('admin.users_list') }}">用户管理</a></li>
                             </ul>
                         </li>
                         {% endif %}
