--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -17,7 +17,7 @@
             {{ form.is_admin.label(class="form-check-label") }}
         </div>
         <button type="submit" class="btn btn-primary">保存</button>
-        <a href="{{ url_for('admin.users') }}" class="btn btn-secondary">取消</a>
+        <a href="{{ url_for('admin.users_list') }}" class="btn btn-secondary">取消</a>
     </form>
 </div>
 {% endblock %}
